@@ -2338,6 +2338,15 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+name|fs
+operator|.
+name|delete
+argument_list|(
+name|dir
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
