@@ -433,6 +433,8 @@ Release 2.4.0 - UNRELEASED
     HDFS-5891. webhdfs should not try connecting the DN during redirection
     (Haohui Mai via brandonli)
 
+    HDFS-5904. TestFileStatus fails intermittently. (Mit Desai via kihwal)
+ 
 Release 2.3.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
